# CameraManCore

./: .gitignore  LICENSE  README.md  collect_inference.py  model.py  preprocess.py  pyproject.toml  train.py  unit_demo.py
