[tool.poetry]
name = "cameramancore"
version = "0.1.0"
description = ""
authors = ["cailurus <ailurus.chow@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.11.4"
opencv-python = "^4.8.0.76"
mediapipe = "^0.10.3"
pandas = "^2.1.0"
keras = "^2.13.1"
fastparquet = "^2023.8.0"
pydot = "^1.4.2"
graphviz = "^0.20.1"
tqdm = "^4.66.1"
tensorflow = "^2.13.0"
scikit-learn = "^1.3.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.25.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
